# libstatistics

./: CMakeLists.txt  Doxyfile  README.md
doc/: Doxyfile
include/statistics/: statistics.hpp
src/: statistics.cpp
tutorial/: CMakeLists.txt  tutorial1.cpp  tutorial2.cpp
